--- a/src/main/resources/templates/discount/discount-detail.html
+++ b/src/main/resources/templates/discount/discount-detail.html
@@ -59,7 +59,7 @@
             <label class="control-label" data-th-for="${approvedBy}">Approved by</label>
         </div>
         <div class="col-md-8">
-            <p class="form-control" data-th-text="${approvedBy.approved}"></p>
+            <p class="form-control" data-th-text="${discountDetail.approvedBy}"></p>
         </div>
     </div>
     <!--current Status-->
@@ -68,7 +68,7 @@
             <label class="control-label" data-th-for="${discountStatus}">Current status</label>
         </div>
         <div class="col-md-8">
-            <p class="form-control" data-th-text="${discountStatus.status}"></p>
+            <p class="form-control" data-th-text="${discountDetail.discountStatus}"></p>
         </div>
     </div>
 
