--- a/src/main/resources/templates/Hall/addHall.html
+++ b/src/main/resources/templates/Hall/addHall.html
@@ -9,106 +9,99 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
-    <div class="col-4">
-    </div>
-    <div class="col-4">
-        <h1>Hall Management - Add New Hall</h1>
-    </div>
-    <div class="col-4">
-        <a href="/hall">
-            <button class="btn btn-primary">All Hall</button>
-        </a>
+<div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
+    <div class="wrapper wrapper--w680">
+        <div class="card card-4">
+            <div class="card-body">
+                <div class="col-8">
+                    <a href="/hall">
+                        <h2 class="title">Hall Management</h2>
+                    </a>
+                </div>
+
+                <div class="col-4">
+                    <a href="/hall">
+                        <button class="btn btn-primary">All Hall</button>
+                    </a>
+                </div>
+                <form action="/hall/save" data-th-object="${hall}" method="post">
+                    <div class="row row-space">
+                        <div class="col-2">
+                            <div class="input-group">
+                                <label class="label form-row text-right" data-th-for="${id}">Hall ID</label>
+                                <input class="input--style-4 form-control"  data-th-field="*{id}"type="text" name="first_name">
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="input-group">
+                                <label class="label form-row text-right" data-th-for="${number}">Hall Number</label>
+                                <input class="input--style-4 form-control"  data-th-field="*{number}" type="text" name="Hall Number">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row row-space">
+                        <div class="col-2">
+                            <div class="input-group">
+                                <label class="label form-row text-right" data-th-for="${seatCount}">Seat Count</label>
+                                <input class="input--style-4 form-control"  data-th-field="*{seatCount}"type="text" name="first_name">
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div class="input-group">
+                                <label class="label form-row text-right" data-th-for="${number}">Hall Number</label>
+                                <input class="input--style-4 form-control"  data-th-field="*{number}" type="text" name="Hall Number">
+                            </div>
+                        </div>
+                        <div class="input-group">
+                            <label class="label form-row text-right" data-th-for="${hallName}">Hall Name</label>
+                            <input class="input--style-4 form-control"  data-th-field="*{hallName}"type="text" name="first_name">
+                        </div>
+                    </div>
+            </div>
+            <div class="row row-space">
+                <div class="col-2">
+                    <div class="input-group">
+                        <label class="label">Email</label>
+                        <input class="input--style-4" type="email" name="email">
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="input-group">
+                        <label class="label">Phone Number</label>
+                        <input class="input--style-4" type="text" name="phone">
+                    </div>
+                </div>
+            </div>
+            <div class="input-group">
+                <label class="label">Subject</label>
+                <div class="rs-select2 js-select-simple select--no-search">
+                    <select name="subject">
+                        <option disabled="disabled" selected="selected">Choose option</option>
+                        <option>Subject 1</option>
+                        <option>Subject 2</option>
+                        <option>Subject 3</option>
+                    </select>
+                    <div class="select-dropdown"></div>
+                </div>
+            </div>
+            <div class="p-t-15">
+                <button class="btn btn--radius-2 btn--blue" type="submit">Submit</button>
+            </div>
+            </form>
+        </div>
     </div>
 </div>
-<div class="container-fluid">
-    <form action="/hall/save" data-th-object="${hall}" method="post">
-        <!--hall id-->
-        <div class="form-row text-right" data-th-if="${addStatus==false}">
-            <div class="col-md-4">
-                <label data-th-for="${id}">Id</label>
-            </div>
-            <div class="col-md-8">
-                <label>
-                    <input class="form-control" data-th-field="*{id}" readonly type="text">
-                </label>
-            </div>
-        </div>
-        <!-- Number-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${number}">Hall Number :</label>
-            </div>
-            <div class="col-md-8">
-                <label>
-                    <input class="form-control" data-th-field="*{number}" required tabindex="4" type="text"/>
-                </label>
-                <span data-th-errors="*{number}"
-                      data-th-if="${#fields.hasErrors('number')}">Error Name</span>
-            </div>
-        </div>
-        <!--Condition-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${hallCondition}">Hall Condition :</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{hallCondition}" required tabindex="4" type="text"/>
-                <span data-th-errors="*{hallCondition}"
-                      data-th-if="${#fields.hasErrors('hallCondition')}">Error Name</span>
-            </div>
-        </div>
-        <!-- hallName-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${hallName}">Hall Name :</label>
-            </div>
-            <div class="col-md-8">
-                <label>
-                    <input class="form-control" data-th-field="*{hallName}" required tabindex="4" type="text"/>
-                </label>
-                <span data-th-errors="*{hallName}"
-                      data-th-if="${#fields.hasErrors('hallName')}">Error Name</span>
-            </div>
-        </div>
-
-        <!--Count-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${seatCount}">Seating Count :</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{seatCount}" required tabindex="4" type="text"/>
-                <span data-th-errors="*{seatCount}"
-                      data-th-if="${#fields.hasErrors('seatCount')}">Error Name</span>
-            </div>
-        </div>
-        <!--Location-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${HallLocation}">Location:</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{HallLocation}" required tabindex="4" type="text"/>
-                <span data-th-errors="*{HallLocation}"
-                      data-th-if="${#fields.hasErrors('HallLocation')}">Error Name</span>
-            </div>
-        </div>
-
-        <!--Button-->
-        <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
-            <button class="btn btn-success" tabindex="21" type="submit">
-                <i class="fa fa-save " style="font-size: 20px"></i>&nbsp; &nbsp;<span
-                    data-th-text="${addStatus==true?'Save': 'Update'}"
-                    id="submit"></span>
-            </button>
-        </div>
-    </form>
 </div>
 
-<!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
-<!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<!-- Jquery JS-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<!-- Vendor JS-->
+<script src="vendor/select2/select2.min.js"></script>
+<script src="vendor/datepicker/moment.min.js"></script>
+<script src="vendor/datepicker/daterangepicker.js"></script>
+
+<!-- Main JS-->
+<script src="js/global.js"></script>
+
 </body>
 </html>
