--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,6 +37,19 @@
     <link th:href="@{/css/animate.css}" media="all" rel="stylesheet" type="text/css"/>
 
     <link th:href="@{/css/cards.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!-- Icons font CSS-->
+    <link th:href="@{vendor/mdi-font/css/material-design-iconic-font.min.css}" rel="stylesheet" media="all">
+    <!-- Font special for pages-->
+    <link th:href="@{https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i}" rel="stylesheet">
+
+    <!-- Vendor CSS-->
+    <link th:href="@{vendor/select2/select2.min.css}" rel="stylesheet" media="all">
+    <link th:href="@{vendor/datepicker/daterangepicker.css}" rel="stylesheet" media="all">
+
+    <!-- Main CSS-->
+    <link th:href="@{css/main.css}" rel="stylesheet" media="all">
+
 </head>
 <body>
 
