Student reg number was completed

--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -167,13 +167,8 @@
                       data-th-if="${#fields.hasErrors('fee')}">Error Name</span>
             </div>
         </div>
-
-        <!--Button-->
-<<<<<<< HEAD
-        <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
-=======
-        <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
->>>>>>> 2620e6f6a389a3cc3a95251fa10504462b0eeb03
+        <div>
+            <!--Button-->
             <button class="btn btn-success" tabindex="21" type="submit">
                 <i class="fa fa-save " style="font-size: 20px"></i>&nbsp; &nbsp;<span
                     data-th-text="${addStatus==true?'Save': 'Update'}"
