--- a/src/main/resources/static/css/myCss.css
+++ b/src/main/resources/static/css/myCss.css
@@ -1,3 +1,4 @@
+
 * {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
@@ -20,7 +21,7 @@ body {
 
 #loginback{
 
-    background-image: url(../img/1.jpg);
+    background-image: url(../img/loginBackground.png);
     -webkit-background-size:cover;
     background-size: cover;
     background-position:center center;
@@ -673,5 +674,3 @@ a.wrimagecard:hover, .wrimagecard-topimage:hover {
 }
 .wrimagecard-topimage a {
     border-bottom: none;}
-
-/** Cards style end**/
