--- a/src/main/resources/templates/teacher/addTeacher.html
+++ b/src/main/resources/templates/teacher/addTeacher.html
@@ -167,9 +167,8 @@
                       data-th-if="${#fields.hasErrors('fee')}">Error Name</span>
             </div>
         </div>
-
-        <!--Button-->
-        <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
+        <div>
+            <!--Button-->
             <button class="btn btn-success" tabindex="21" type="submit">
                 <i class="fa fa-save " style="font-size: 20px"></i>&nbsp; &nbsp;<span
                     data-th-text="${addStatus==true?'Save': 'Update'}"
