--- a/src/main/resources/templates/subject/subject.html
+++ b/src/main/resources/templates/subject/subject.html
@@ -9,46 +9,87 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
-    <div class="col-4">
-        <a href="/subject/new">
-            <button class="btn btn-primary">New Subject</button>
-        </a>
+
+
+    <nav class="navbar navbar-expand-sm bg-primary">
+        <div class="col-4"></div>
+        <div class="col-4">
+          <h1><span class="navbar-text">Subject Management</span></h1>
+        </div>
+        <div class="col-4">
+            <a href="/subject/new">
+                <button class="btn btn-primary">New Subject</button>
+            </a>
+        </div>
+    </nav>
+
+<div class="container">
+    <div class="col-3>"></div>
+    <div class="col-6">
+        <h2>Striped Rows</h2>
+        <table class="table table-striped">
+            <thead class="thead-inverse">
+            <tr>
+                <th>Index</th>
+                <th>Name</th>
+                <th>Code</th>
+                <th>Modify</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-th-each="subject, index : ${subjects}">
+                <td data-th-text="${index.count}"></td>
+                <td data-th-text="${subject.name}"></td>
+                <td data-th-text="${subject.code}"></td>
+                <td>
+                    <a data-th-href="${'/subject/view/'+ subject.id}"><button class="btn btn-info">View</button></a>
+                    <a data-th-href="${'/subject/edit/'+ subject.id}"><button class="btn btn-success">Edit</button></a>
+                    <a data-th-href="${'/subject/delete/'+ subject.id}"><button class="btn btn-danger">Delete</button></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-    <div class="col-4">
-        <h1>Subject Management</h1>
-    </div>
-    <div class="col-4"></div>
+    <div class="col-3"></div>
+
 </div>
 
+
+
+<!--
 <div class="container-fluid">
-    <table class="table table-striped table-inverse table-responsive" id="myTable">
-        <thead class="thead-inverse">
-        <tr>
-            <th>Index</th>
-            <th>Name</th>
-            <th>Code</th>
-            <th>Modify</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr data-th-each="subject, index : ${subjects}">
-            <td data-th-text="${index.count}"></td>
-            <td data-th-text="${subject.name}"></td>
-            <td data-th-text="${subject.code}"></td>
-            <td>
-                <a data-th-href="${'/subject/view/'+ subject.id}"><button class="btn btn-info">View</button></a>
-                <a data-th-href="${'/subject/edit/'+ subject.id}"><button class="btn btn-success">Edit</button></a>
-                <a data-th-href="${'/subject/delete/'+ subject.id}"><button class="btn btn-danger">Delete</button></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+    <div class="col-3>"></div>
+    <div class="col-6">
+        <table class="table table-striped table-inverse table-responsive" id="myTable">
+            <thead class="thead-inverse">
+            <tr>
+                <th>Index</th>
+                <th>Name</th>
+                <th>Code</th>
+                <th>Modify</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-th-each="subject, index : ${subjects}">
+                <td data-th-text="${index.count}"></td>
+                <td data-th-text="${subject.name}"></td>
+                <td data-th-text="${subject.code}"></td>
+                <td>
+                    <a data-th-href="${'/subject/view/'+ subject.id}"><button class="btn btn-info">View</button></a>
+                    <a data-th-href="${'/subject/edit/'+ subject.id}"><button class="btn btn-success">Edit</button></a>
+                    <a data-th-href="${'/subject/delete/'+ subject.id}"><button class="btn btn-danger">Delete</button></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-3"></div>
+</div>-->
+
 
 <!--footer is included-->
 <footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<script data-th-replace="~{fragments/script :: scriptFragment}"></>
 </body>
 </html>
