discount module not working

--- a/src/main/resources/templates/subject/subject-detail.html
+++ b/src/main/resources/templates/subject/subject-detail.html
@@ -60,9 +60,9 @@
 
 </div>
 <!--Button-->
-<div class="btn btn-info">
+<div class="container-fluid">
     <a href="/subject">
-        <button class="btn btn-success" tabindex="21" type="submit">Back</button>
+        <button class="btn btn-success" tabindex="21" type="submit" align="center">Back</button>
     </a>
 </div>
 
