discount module not working

--- a/src/main/resources/templates/subject/subject-detail.html
+++ b/src/main/resources/templates/subject/subject-detail.html
@@ -62,7 +62,7 @@
 <!--Button-->
 <div class="container-fluid">
     <a href="/subject">
-        <button class="btn btn-success" tabindex="21" type="submit" align="center">Back</button>
+        <button class="btn btn-success"  type="submit" align="center">Back</button>
     </a>
 </div>
 
