--- a/src/main/resources/templates/hall/hall-detail.html
+++ b/src/main/resources/templates/hall/hall-detail.html
@@ -57,10 +57,10 @@
     <!--location-->
     <div class="form-row text-right">
         <div class="col-md-4">
-            <label class="control-label" data-th-for="${HallLocation}">Hall location:</label>
+            <label class="control-label" data-th-for="${hallLocation}">Hall location:</label>
         </div>
         <div class="col-md-8">
-            <p class="form-control" data-th-text="${hallDetail.HallLocation}"></p>
+            <p class="form-control" data-th-text="${hallDetail.hallLocation}"></p>
         </div>
     </div>
 </div>
