--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -9,49 +9,56 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
+<div class="row bg-link">
     <div class="col-4">
-        <a href="/batch/new">
-            <button class="btn btn-primary">New Batch</button>
-        </a>
+
     </div>
     <div class="col-4">
         <h1>Batch Management</h1>
     </div>
-    <div class="col-4"></div>
+    <div class="col-4">
+        <a href="/batch/new">
+            <button class="btn btn-primary" align="center">New Batch</button>
+        </a>
+    </div>
 </div>
 
-<div class="container-fluid">
-    <table class="table table-striped table-inverse table-responsive" id="myTable">
-        <thead class="thead-inverse">
-        <tr>
-            <th>Index</th>
-            <th>Class Referance</th>
-            <th>Year</th>
-            <th>Grade</th>
-            <th>Subject Name</th>
-            <th>Teacher Name</th>
+<div class="container-fluid row">
+    <div class="col-2"></div>
+    <div class="col-8">
+        <table class="table table-striped table-inverse table-responsive" id="myTable">
+            <thead class="thead-inverse">
+            <tr>
+                <th>Index</th>
+                <th>Class Referance</th>
+                <th>Year</th>
+                <th>Grade</th>
+                <th>Subject Name</th>
+                <th>Teacher Name</th>
 
-        </tr>
-        </thead>
-        <tbody>
-        <tr data-th-each="batch, index : ${batchs }">
-            <td data-th-text="${index.count}"></td>
-            <td data-th-text="${batch.classReferance}"></td>
-            <td data-th-text="${batch.year}"></td>
-            <td data-th-text="${batch.grade}"></td>
-            <td data-th-text="${batch.subjectName}"></td>
-            <td data-th-text="${batch.teacherName}"></td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-th-each="batch, index : ${batchs }">
+                <td data-th-text="${index.count}"></td>
+                <td data-th-text="${batch.classReferance}"></td>
+                <td data-th-text="${batch.year}"></td>
+                <td data-th-text="${batch.grade}"></td>
+                <td data-th-text="${batch.subjectName}"></td>
+                <td data-th-text="${batch.teacherName}"></td>
 
 
-            <td>
-                <a data-th-href="${'/batch/view/'+ batch.id}"><button class="btn btn-info">View</button></a>
-                <a data-th-href="${'/batch/edit/'+ batch.id}"><button class="btn btn-success">Edit</button></a>
-                <a data-th-href="${'/batch/delete/'+ batch.id}"><button class="btn btn-danger">Delete</button></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+                <td>
+                    <a data-th-href="${'/batch/view/'+ batch.id}"><button class="btn btn-info">View</button></a>
+                    <a data-th-href="${'/batch/edit/'+ batch.id}"><button class="btn btn-success">Edit</button></a>
+                    <a data-th-href="${'/batch/delete/'+ batch.id}"><button class="btn btn-danger">Delete</button></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-2"></div>
+
 </div>
 
 <!--footer is included-->
