--- a/src/main/resources/templates/discount/discount.html
+++ b/src/main/resources/templates/discount/discount.html
@@ -9,49 +9,49 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
-    <div class="col-4">
-        <a href="/discount/new">
-            <button class="btn btn-primary">Create a Discount</button>
-        </a>
-    </div>
+<div class="row bg-light">
+    <div class="col-4"></div>
     <div class="col-4">
         <h1>Discount Management</h1>
     </div>
-    <div class="col-4"></div>
+    <div class="col-4"> <a href="/discount/new">
+        <button class="btn btn-primary">Create a Discount</button>
+    </a></div>
 </div>
 
-<div class="container-fluid">
-    <table class="table table-striped table-inverse table-responsive" id="myTable">
-        <thead class="thead-inverse">
-        <tr>
-            <th>Index</th>
-            <th>Discount Name</th>
-            <th>Discount type</th>
-            <th>Amount</th>
-            <th>Approved by</th>
-            <th>Status</th>
+<div class="container-fluid row">
+    <div class="col-lg-1"></div>
+    <div class="col-lg-10">
+        <table class="table table-striped table-inverse table-responsive container" id="myTable"  >
+            <thead class="thead-inverse">
+            <tr>
+                <th>Discount Code</th>
+                <th>Discount type</th>
+                <th>Amount</th>
+                <th>Approved by</th>
+                <th>Status</th>
 
-        </tr>
-        </thead>
-        <tbody>
-        <tr data-th-each="discount, index : ${discounts }">
-            <td data-th-text="${index.count}"></td>
-            <td data-th-text="${discount.discountName}"></td>
-            <td data-th-text="${discount.discountType}"></td>
-            <td data-th-text="${discount.discountAmount}"></td>
-            <td data-th-text="${discount.approvedBy}"></td>
-            <td data-th-text="${discount.discountStatus}"></td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-th-each="discount, index : ${discounts }">
+                <td data-th-text="${index.count}"></td>
+                <td data-th-text="${discount.discountType}"></td>
+                <td data-th-text="${discount.discountAmount}"></td>
+                <td data-th-text="${discount.approvedBy}"></td>
+                <td data-th-text="${discount.discountStatus}"></td>
 
 
-            <td>
-                <a data-th-href="${'/discount/view/'+ discount.id}"><button class="btn btn-info">View</button></a>
-                <a data-th-href="${'/discount/edit/'+ discount.id}"><button class="btn btn-success">Edit</button></a>
-                <a data-th-href="${'/discount/delete/'+ discount.id}"><button class="btn btn-danger">Delete</button></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+                <td>
+                    <a data-th-href="${'/discount/view/'+ discount.id}"><button class="btn btn-info">View</button></a>
+                    <a data-th-href="${'/discount/edit/'+ discount.id}"><button class="btn btn-success">Edit</button></a>
+                    <a data-th-href="${'/discount/delete/'+ discount.id}"><button class="btn btn-danger">Delete</button></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-lg-1"></div>
 </div>
 
 <!--footer is included-->
