Discount Module Done !!!!
--------------------------------

Need to modify Discound Code as INDEX.
Code should be running number with annotation
Ex; D20200915
------------------Help me to do that------------------

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Success Student Management</title>
 </head>
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
@@ -23,7 +23,7 @@
         </div>
         <div class="col">
             <a href="/employee" class="btn btn-primary">
-                <i class="fa fa-list"></i>&nbsp; View List
+                <i class="fa fa-list"></i>&nbsp;View List
             </a>
         </div>
     </div>
