--- a/src/main/resources/templates/batch/batch-detail.html
+++ b/src/main/resources/templates/batch/batch-detail.html
@@ -9,74 +9,115 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
+<div class="row bg-link">
+    <div class="col-4">
+
+    </div>
+    <div class="col-4">
+        <h1>Batch Details</h1>
+    </div>
     <div class="col-4">
         <a href="/batch/new">
-            <button class="btn btn-info">New Batch</button>
-        </a>
-    </div>
-    <div class="col-4">
-        <h1>Batch Management - Batch Detail</h1>
-    </div>
-    <div class="col-4">
-        <a href="/batch">
-            <button class="btn btn-primary">All Batch</button>
+            <button class="btn btn-primary" align="center">New Batch</button>
         </a>
     </div>
 </div>
-<!--Batch detail-->
-<div class="container-fluid" data-th-fragment="batchDetail">
-    <!--Class Referance-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${classReferance}">Class Referance :</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${batchDetail.classReferance}"></p>
-        </div>
-    </div>
-    <!--Grade-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${grade}">Grade :</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${batchDetail.grade}"></p>
-        </div>
-    </div>
-    <!--Year-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${year}">year :</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${batchDetail.year}"></p>
-        </div>
-    </div>
-    <!--Teacher-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${teacherName}">Teacher Name :</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${batchDetail.teacherName}"></p>
-        </div>
-    </div>
 
+<div class="row container-fluid">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-8">
+        <div class="form-group">
+            <label data-th-for="${classReferance}" class="col-sm-3 control-label">Class reference</label>
+            <div class="col-sm-6">
+                <p type="text" id="classReferance" class="form-control" data-th-text="*{batchDetail.classReferance}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${year}" class="col-sm-3 control-label">Academic Year</label>
+            <div class="col-sm-6">
+                <p type="text" id="year" class="form-control" data-th-text="*{batchDetail.year}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${grade}" class="col-sm-3 control-label">Grade</label>
+            <div class="col-sm-6">
+                <p type="text" id="grade" class="form-control" data-th-text="*{batchDetail.grade}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${teacherName}" class="col-sm-3 control-label">Teacher</label>
+            <div class="col-sm-6">
+                <p type="text" id="teacherName" class="form-control" data-th-text="*{batchDetail.teacherName}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label data-th-for="${subjectName}" class="col-sm-3 control-label">Subject Name</label>
+            <div class="col-sm-6">
+                <p type="text" id="subjectName" class="form-control" data-th-text="*{batchDetail.subjectName}">
+            </div>
+        </div>
 
+        <div class="row container-fluid">
+            <div class="col-sm-2 col-sm-offset-2">
+                <a href="/batch">
+                <button type="link"  class="btn btn-danger btn-block" >Back</button>
+                </a>
+            </div>
+
+        </div>
+    </div>
+    <div class="col-sm-1"></div>
 </div>
-<!--Button-->
-<div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
-    <a href="/batch">
-        <button class="btn btn-success" tabindex="21" type="submit">
-            Back
-        </button>
-    </a>
-</div>
+<!--&lt;!&ndash;Batch detail&ndash;&gt;-->
+<!--<div class="container-fluid" data-th-fragment="batchDetail">-->
+<!--    &lt;!&ndash;Class Referance&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${classReferance}">Class Referance :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${batchDetail.classReferance}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;Grade&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${grade}">Grade :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${batchDetail.grade}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;Year&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${year}">year :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${batchDetail.year}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;Teacher&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${teacherName}">Teacher Name :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${batchDetail.teacherName}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
 
-<!--footer is included-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
-<!--script is included-->
-<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
+
+<!--</div>-->
+<!--&lt;!&ndash;Button&ndash;&gt;-->
+<!--<div class="form-batch col-md-12 col-sm-12 text-center flex-column ">-->
+<!--    <a href="/batch">-->
+<!--        <button class="btn btn-success" tabindex="21" type="submit">-->
+<!--            Back-->
+<!--        </button>-->
+<!--    </a>-->
+<!--</div>-->
+
+
 </body>
 </html>
