--- a/src/main/resources/templates/discount/discount-detail.html
+++ b/src/main/resources/templates/discount/discount-detail.html
@@ -9,79 +9,111 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
+<div class="row bg-link">
+    <div class="col-4">
+
+    </div>
+    <div class="col-4">
+        <h1>Discount Details</h1>
+    </div>
     <div class="col-4">
         <a href="/discount/new">
-            <button class="btn btn-info">New Discount</button>
-        </a>
-    </div>
-    <div class="col-4">
-        <h1>Discount Management - Discount Detail</h1>
-    </div>
-    <div class="col-4">
-        <a href="/discount">
-            <button class="btn btn-primary">All Discount</button>
+            <button class="btn btn-primary" align="center">Create a Discount</button>
         </a>
     </div>
 </div>
 <!--Discount detail-->
-<div class="container-fluid" data-th-fragment="discountDetail">
-    <!-- Discount Name-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${discountName}">Discount Name :</label>
+<div class=" row container-fluid" data-th-fragment="discountDetail">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-8">
+        <div class="form-group">
+            <label data-th-for="${id}" class="col-sm-3 control-label">Discount Code</label>
+            <div class="col-sm-6">
+                <p type="text" id="id" class="form-control" data-th-text="*{discountDetail.id}">
+            </div>
         </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${discountDetail.discountName}"></p>
+        <div class="form-group">
+            <label data-th-for="${discountType}" class="col-sm-3 control-label">Discount type</label>
+            <div class="col-sm-6">
+                <p type="text" id="discountType" class="form-control" data-th-text="*{discountDetail.discountType}">
+            </div>
         </div>
-    </div>
-    <!--Discount Type-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${discountType}">Discount type :</label>
+        <div class="form-group">
+            <label data-th-for="${discountAmount}" class="col-sm-3 control-label">Discount Value</label>
+            <div class="col-sm-6">
+                <p type="text" id="discountAmount" class="form-control" data-th-text="*{discountDetail.discountAmount}">
+            </div>
         </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${discountDetail.discountType}"></p>
+        <div class="form-group">
+            <label data-th-for="${approvedBy}" class="col-sm-3 control-label">Approved by</label>
+            <div class="col-sm-6">
+                <p type="text" id="approvedBy" class="form-control" data-th-text="*{discountDetail.approvedBy}">
+            </div>
         </div>
-    </div>
-    <!--Amount-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${discountAmount}">Discount Amount :</label>
+        <div class="form-group">
+            <label data-th-for="${discountStatus}" class="col-sm-3 control-label">Status</label>
+            <div class="col-sm-6">
+                <p type="text" id="discountStatus" class="form-control" data-th-text="*{discountDetail.discountStatus}">
+            </div>
         </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${discountDetail.discountAmount}"></p>
-        </div>
-    </div>
-    <!--Approved By-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${approvedBy}">Approved by</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${discountDetail.approvedBy}"></p>
-        </div>
-    </div>
-    <!--current Status-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${discountStatus}">Current status</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${discountDetail.discountStatus}"></p>
-        </div>
-    </div>
 
+        <div class="row container-fluid">
+            <div class="col-sm-2 col-sm-offset-2">
+                <a href="/discount">
+                    <button type="link"  class="btn btn-danger btn-block" >Back</button>
+                </a>
+            </div>
 
+        </div>
+    </div>
+    <div class="col-sm-1"></div>
 </div>
-<!--Button-->
-<div class="form-discount col-md-12 col-sm-12 text-center flex-column ">
-    <a href="/discount">
-        <button class="btn btn-success" tabindex="21" type="submit">
-            Back
-        </button>
-    </a>
-</div>
+<!--    &lt;!&ndash; Discount Name&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${discountName}">Discount Name :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${discountDetail.discountName}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;Discount Type&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${discountType}">Discount type :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${discountDetail.discountType}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;Amount&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${discountAmount}">Discount Amount :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${discountDetail.discountAmount}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;Approved By&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${approvedBy}">Approved by</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${discountDetail.approvedBy}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;current Status&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${discountStatus}">Current status</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${discountDetail.discountStatus}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+
 
 <!--footer is included-->
 <footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
